# nonlinear_dynamic_systems

./: README.md
hw1/: forward_and_inverse_kinematics.ipynb
hw2/: Makefile  README.md
hw2/scripts/: run_display.sh
hw2/src/anthropomorphic_hand/: CMakeLists.txt  package.xml
hw2/src/anthropomorphic_hand/launch/: display.launch.py
hw2/src/anthropomorphic_hand/rviz/: arm.rviz
hw2/src/anthropomorphic_hand/scripts/: arm_wave.py
hw2/src/anthropomorphic_hand/urdf/: anthropomorphic_arm.urdf  my_robot.urdf
hw3/: HomeAssignment_3.ipynb
hw4/: dynamics.ipynb
